unpackaged/main/default/objects/GSR_Change_Failed_PR__c/GSR_Change_Failed_PR__c.object-meta.xml
<CustomObject>
    <label>Change Failed Pull Request</label>
    <nameField>
        <displayFormat>GSCFPR-{0000000}</displayFormat>
        <label>Change Failed PR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Failed Pull Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>