unpackaged/main/default/objects/GSR_Change_Failed_PR__c/fields/Author_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_User_Name__c</fullName>
    <label>Author User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>