unpackaged/main/default/objects/GSR_Change_Failed_PR__c/fields/Gearset_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gearset Deployment</label>
    <referenceTo>Gearset_Deployment__c</referenceTo>
    <relationshipName>Pull_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>